remove unused assets

--- a/clearance/content.html
+++ b/clearance/content.html
@@ -1,61 +1,52 @@
 <!--Heading Section-->
-<h4 id="head-1">Fill Out Clearance and Final Grade Form</h4>
-<h4 id="head-2">Get Final Grades</h4>
-<h4 id="head-3">Class Treasurer</h4>
-<h4 id="head-4">Department Head</h4>
-<h4 id="head-5">SSC Office</h4>
-<h4 id="head-6">Guidance Office</h4>
-<h4 id="head-7">Library</h4>
-<h4 id="head-8">Assessor's Office</h4>
-<h4 id="head-9">Treasurer's Office</h4>
-<h4 id="head-10">Registrar's Office</h4>
-<h4 id="head-11">HAC's Office</h4>
-<h4 id="head-12">EVP (Executive Vice President) Office</h4>
+<h4 id="head-1">Fill Out Clearance Form</h4>
+<h4 id="head-2">Class Treasurer</h4>
+<h4 id="head-3">Department Head</h4>
+<h4 id="head-4">SSC Office</h4>
+<h4 id="head-5">Guidance Office</h4>
+<h4 id="head-6">Library</h4>
+<h4 id="head-7">Assessor's Office</h4>
+<h4 id="head-8">Treasurer's Office</h4>
+<h4 id="head-9">Registrar's Office</h4>
+<h4 id="head-10">HAC's Office</h4>
+<h4 id="head-11">EVP (Executive Vice President) Office</h4>
 
 <!--Content Section-->
 <div id="content-1" class="content">
   <h5>What To Do:</h5>
-  <p>Fill out necessary information in the Certificate of <a href="../glossary.html#doc-4" target="_blank">Clearance <i class="elink"></i></a> and <a href="../glossary.html#doc-8" target="_blank">Final Grade Form <i class="elink"></i></a>.</p>
+  <p>Fill out necessary information in the Certificate of <a href="../glossary/index.html#doc-4" target="_blank">Clearance <i class="elink"></i></a>.</p>
 </div>
 <div id="content-2" class="content">
   <h5>What To Do:</h5>
-  <p>Get your Final Grades at the designated Window of your course at the <a href="../glossary.html#loc-11" target="_blank">Registrar <i class="elink"></i></a>.</p>
-  <h5>Where To Go:</h5>
-  <p>1st Floor, <a href="../glossary.html#loc-5" target="_blank">Building D <i class="elink"></i></a></p>
-  <h5>What You'll Need</h5>
-  <p><a href="../glossary.html#doc-3" target="_blank">Blue Form (Student's Copy of Enrollment) <i class="elink"></i></a></p>
+  <p>Look for your class treasurer and settle any necessary payment to get your clearance signed.</p>
 </div>
 <div id="content-3" class="content">
   <h5>What To Do:</h5>
-  <p>Look for your class treasurer and settle any necessary payment to get your clearance signed.</p>
+  <p>Seek and get your clearance signed by your Department Head.</p>
 </div>
 <div id="content-4" class="content">
   <h5>What To Do:</h5>
-  <p>Seek and get your clearance signed by your Department Head.</p>
-</div>
-<div id="content-5" class="content">
-  <h5>What To Do:</h5>
-  <p>Settle any penalties at the <a href="../glossary.html#loc-13" target="_blank">SSC Office <i class="elink"></i></a>.</p>
+  <p>Settle any penalties at the <a href="../glossary/index.html#loc-13" target="_blank">SSC Office <i class="elink"></i></a>.</p>
   <h5>Where To Go:</h5>
-  <p>1st Floor, <a href="../glossary.html#loc-3" target="_blank">Building B <i class="elink"></i></a></p>
+  <p>1st Floor, <a href="../glossary/index.html#loc-3" target="_blank">Building B <i class="elink"></i></a></p>
   <h5>What You'll Need:</h5>
   <p>Blue Form (Student's Copy of Enrollment)</p>
 </div>
-<div id="content-6" class="content">
+<div id="content-5" class="content">
   <h5>Where To Go:</h5>
-  <p>2nd Floor, <a href="../glossary.html#loc-2" target="_blank">Building A <i class="elink"></i></a></p>
+  <p>2nd Floor, <a href="../glossary/index.html#loc-2" target="_blank">Building A <i class="elink"></i></a></p>
   <h5>What You'll Need</h5>
   <p>Blue Form (Student's Copy of Enrollment)</p>
 </div>
-<div id="content-7" class="content">
+<div id="content-6" class="content">
   <h5>What To Do:</h5>
   <p>Surrender your library card at the Library.</p>
   <h5>Where To Go:</h5>
-  <p>4th Floor, <a href="../glossary.html#loc-4" target="_blank">Building C <i class="elink"></i></a></p>
+  <p>4th Floor, <a href="../glossary/index.html#loc-4" target="_blank">Building C <i class="elink"></i></a></p>
   <h5>What You'll Need</h5>
-  <p><a href="../glossary.html#doc-11" target="_blank">Library Card <i class="elink"></i></a></p>
+  <p><a href="../glossary/index.html#doc-11" target="_blank">Library Card <i class="elink"></i></a></p>
 </div>
-<div id="content-8" class="content">
+<div id="content-7" class="content">
   <h5>What To Do:</h5>
   <p>Get an assessment of payment at the Assessor's Office.</p>
   <h5>Where To Go:</h5>
@@ -63,7 +54,7 @@
   <h5>What You'll Need</h5>
   <p>Blue Form (Student's Copy of Enrollment)</p>
 </div>
-<div id="content-9" class="content">
+<div id="content-8" class="content">
   <h5>What To Do:</h5>
   <p>Pay the required amount as stated in the assessment.</p>
   <h5>Where To Go:</h5>
@@ -71,7 +62,7 @@
   <h5>What You'll Need:</h5>
   <p>Blue Form (Student's Copy of Enrollment)</p>
 </div>
-<div id="content-10" class="content">
+<div id="content-9" class="content">
   <h5>What To Do:</h5>
   <p>Proceed to the Registrar's Office to get both signatures of the NSTP Coordinator and the College Registrar.</p>
   <h5>Where To Go:</h5>
@@ -79,7 +70,7 @@
   <h5>What You'll Need:</h5>
   <p>Blue Form (Student's Copy of Enrollment)</p>
 </div>
-<div id="content-11" class="content">
+<div id="content-10" class="content">
   <h5>What To Do:</h5>
   <p>Students must follow the dress code guidelines as stated in the College Student's Handbook.</p>
   <h5>Where To Go:</h5>
@@ -87,11 +78,11 @@
   <h5>What You'll Need:</h5>
   <ul>
     <li>Blue Form (Student's Copy of Enrollment)</li>
-    <li><a href="../glossary.html#doc-12" target="_blank">School ID <i class="elink"></i></a></li>
+    <li><a href="../glossary/index.html#doc-12" target="_blank">School ID <i class="elink"></i></a></li>
     <li>Must be in the prescribed College uniform.</li>
   </ul>
 </div>
-<div id="content-12" class="content">
+<div id="content-11" class="content">
   <h5>Where To Go:</h5>
   <p>1st Floor, Building D</p>
   <h5>What You'll Need:</h5>
