--- a/enrollment/content.html
+++ b/enrollment/content.html
@@ -13,32 +13,32 @@
 <!--Content Section-->
 <div id="content-1" class="content">
   <h5>What To Do:</h5>
-  <p>Get <a href="../glossary.html#doc-5" target="_blank">enrollment form <i class="elink"></i></a> from the Student Assistant in-charge
+  <p>Get <a href="../glossary/index.html#doc-5" target="_blank">enrollment form <i class="elink"></i></a> from the Student Assistant in-charge
     at the given designated area of the school.</p>
   <h5>What You'll Need:</h5>
   <ul class="sublist-content">
     <li>
       <h5 class="collapsible-header">Old Students</h5>
       <ul class="collapsible-panel">
-        <li><a href="../glossary.html#doc-4" target="_blank">Clearance <i class="elink"></i></a> of the previous semester and <a href="../glossary.html#doc-8" target="_blank">Final Grades <i class="elink"></i></a></li>
+        <li><a href="../glossary/index.html#doc-4" target="_blank">Clearance <i class="elink"></i></a> of the previous semester and <a href="../glossary/index.html#doc-8" target="_blank">Final Grades <i class="elink"></i></a></li>
       </ul>
     </li>
     <li>
         <h5 class="collapsible-header">New Students</h5>
         <ul class="collapsible-panel">
-          <li><a href="../glossary.html#doc-13" target="_blank">Senior High School Report Card (Form 138) <i class="elink"></i></a></li>
-          <li>Senior High School Certificate of <a href="../glossary.html#doc-9" target="_blank">Good Moral Character <i class="elink"></i></a></li>
+          <li><a href="../glossary/index.html#doc-13" target="_blank">Senior High School Report Card (Form 138) <i class="elink"></i></a></li>
+          <li>Senior High School Certificate of <a href="../glossary/index.html#doc-9" target="_blank">Good Moral Character <i class="elink"></i></a></li>
           <li>One (1) copy of 1x1 ID picture</li>
-          <li>Photocopy of <a href="../glossary.html#doc-2" target="_blank">Birth Certificate <i class="elink"></i></a>from P.S.A.</li>
+          <li>Photocopy of <a href="../glossary/index.html#doc-2" target="_blank">Birth Certificate <i class="elink"></i></a>from P.S.A.</li>
         </ul>
     </li>
     <li>
         <h5 class="collapsible-header">Transferees</h5>
         <ul class="collapsible-panel">
-          <li><a href="../glossary.html#doc-10" target="_blank">Honorable Dismissal <i class="elink"></i></a> from last school attended</li>
-          <li>Certificate of <a href="../glossary.html#doc-9" target="_blank">Good Moral Character <i class="elink"></i></a> from last school attended</li>
+          <li><a href="../glossary/index.html#doc-10" target="_blank">Honorable Dismissal <i class="elink"></i></a> from last school attended</li>
+          <li>Certificate of <a href="../glossary/index.html#doc-9" target="_blank">Good Moral Character <i class="elink"></i></a> from last school attended</li>
           <li>One (1) copy of 1x1 ID picture</li>
-          <li>Photocopy of <a href="../glossary.html#doc-2" target="_blank">Birth Certificate <i class="elink"></i></a>from P.S.A. </li>
+          <li>Photocopy of <a href="../glossary/index.html#doc-2" target="_blank">Birth Certificate <i class="elink"></i></a>from P.S.A. </li>
         </ul>
     </li>
   </ul>
@@ -49,9 +49,9 @@
 </div>
 <div id="content-3" class="content">
   <h5>What To Do:</h5>
-  <p>Get your Enrollment Form signed by the <a href="../glossary.html#loc-11" target="_blank">Registrar <i class="elink"></i></a>. For irregular students, seek advice from the Registrar for the subject loading.</p>
+  <p>Get your Enrollment Form signed by the <a href="../glossary/index.html#loc-11" target="_blank">Registrar <i class="elink"></i></a>. For irregular students, seek advice from the Registrar for the subject loading.</p>
   <h5>Where To Go:</h5>
-  <p>1st Floor, <a href="../glossary.html#loc-5" target="_blank">Building D <i class="elink"></i></a></p>
+  <p>1st Floor, <a href="../glossary/index.html#loc-5" target="_blank">Building D <i class="elink"></i></a></p>
   <ul class="sublist-content">
     <li>Look For:
       <ul>
@@ -75,19 +75,19 @@
   <ul class="sublist-content">
     <li><h5>Old Students</h5>
       <ul>
-        <li><a href="../glossary.html#doc-12" target="_blank">School Identification Card (ID) <i class="elink"></i></a></li>
+        <li><a href="../glossary/index.html#doc-12" target="_blank">School Identification Card (ID) <i class="elink"></i></a></li>
       </ul>
     </li>
   </ul>
 </div>
 <div id="content-5" class="content">
   <h5>Where To Go:</h5>
-  <p>1st Floor, <a href="../glossary.html#loc-3" target="_blank">Building B <i class="elink"></i></a></p>
+  <p>1st Floor, <a href="../glossary/index.html#loc-3" target="_blank">Building B <i class="elink"></i></a></p>
   <h5>What You'll Need:</h5>
   <ul class="sublist-content">
     <li><h5>Old Students</h5>
       <ul>
-        <li>Final Clearance and last semester's <a href="../glossary.html#doc-3" target="_blank">Blue Form (Student's Copy of Enrollment) <i class="elink"></i></a></li>
+        <li>Final Clearance and last semester's <a href="../glossary/index.html#doc-3" target="_blank">Blue Form (Student's Copy of Enrollment) <i class="elink"></i></a></li>
       </ul>
     </li>
   </ul>
@@ -98,7 +98,7 @@
 </div>
 <div id="content-7" class="content">
   <h5>Where To Go:</h5>
-  <p>2nd Floor, <a href="../glossary.html#loc-2" target="_blank">Building A <i class="elink"></i></a></p>
+  <p>2nd Floor, <a href="../glossary/index.html#loc-2" target="_blank">Building A <i class="elink"></i></a></p>
   <h5>What You'll Need:</h5>
     <ul class="sublist-content">
       <li><h5 class="collapsible-header">Old Students</h5>
@@ -110,14 +110,14 @@
         <ul class="collapsible-panel">
           <li>1 long white folder</li>
           <li>1 copy of 1x1 ID picture</li>
-          <li>Accomplishment of <a href="../glossary.html#doc-14" target="_blank">Student Information Sheet <i class="elink"></i></a></li>
+          <li>Accomplishment of <a href="../glossary/index.html#doc-14" target="_blank">Student Information Sheet <i class="elink"></i></a></li>
         </ul>
       </li>
     </ul>
 </div>
 <div id="content-8" class="content">
   <h5>Where To Go:</h5>
-  <p>4th Floor, <a href="../glossary.html#loc-10" target="_blank"s>Building C <i class="elink"></i></a></p>
+  <p>4th Floor, <a href="../glossary/index.html#loc-10" target="_blank"s>Building C <i class="elink"></i></a></p>
   <h5>What You'll Need:</h5>
   <ul class="sublist-content">
     <li><h5 class="collapsible-header">Old Students</h5>
