--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </label>
       </div>
       <div class="search">
-        <input class="search-bar" type="text" placeholder="Search...">
+        <input class="search-bar" type="text" placeholder="Filter...">
       </div>
       <ul class="nav-list">
         <li class="list-header doclist"><h4>Forms</h4>
@@ -130,7 +130,7 @@
       </label>
     </div>
     <div class="search-desktop">
-      <input class="search-bar" type="text" placeholder="Search...">
+      <input class="search-bar" type="text" placeholder="Filter...">
     </div>
     <div class="desktop-sidebar">
       <ul class="nav-list">
