--- a/renewal-id/content.html
+++ b/renewal-id/content.html
@@ -17,16 +17,16 @@
 </div>
 <div id="content-2" class="content">
   <h5>What To Do:</h5>
-  <p>Seek aid for an attorney for the application of your <a href="../glossary.html#doc-1" target="_blank">Affidavit of Loss <i class="elink"></i></a> of your ID.</p>
+  <p>Seek aid for an attorney for the application of your <a href="../glossary/index.html#doc-1" target="_blank">Affidavit of Loss <i class="elink"></i></a> of your ID.</p>
 </div>
 <div id="content-3" class="content">
   <h5>What To Do:</h5>
   <p>After securing an Affidavit of Loss, inform Engr. Ronald Tan so he can accommodate you on your renewal of School ID.</p>
   <h5>Where To Go:</h5>
-  <p>3rd Floor, <a href="../glossary.html#loc-3" target="_blank">Building B <i class="elink"></i></a></p>
+  <p>3rd Floor, <a href="../glossary/index.html#loc-3" target="_blank">Building B <i class="elink"></i></a></p>
   <h5>What You'll Need:</h5>
   <ul>
-    <li><a href="../glossary.html#doc-3" target="_blank">Blue Form (Student's Copy of Enrollment) <i class="elink"></i></a></li>
+    <li><a href="../glossary/index.html#doc-3" target="_blank">Blue Form (Student's Copy of Enrollment) <i class="elink"></i></a></li>
     <li>Affidavit of Loss</li>
     <li>Php 15.00</li>
   </ul>
