added expand tip

--- a/enrollment/content.html
+++ b/enrollment/content.html
@@ -15,7 +15,7 @@
   <h5>What To Do:</h5>
   <p>Get <a href="../glossary/index.html#doc-5" target="_blank">enrollment form <i class="elink"></i></a> from the Student Assistant in-charge
     at the given designated area of the school.</p>
-  <h5>What You'll Need:</h5>
+  <h5>What You'll Need:</h5><em>(Click to reveal)</em>
   <ul class="sublist-content">
     <li>
       <h5 class="collapsible-header">Old Students</h5>
@@ -24,7 +24,7 @@
       </ul>
     </li>
     <li>
-        <h5 class="collapsible-header">New Students</h5>
+        <h5 class="collapsible-header">New Students </h5>
         <ul class="collapsible-panel">
           <li><a href="../glossary/index.html#doc-13" target="_blank">Senior High School Report Card (Form 138) <i class="elink"></i></a></li>
           <li>Senior High School Certificate of <a href="../glossary/index.html#doc-9" target="_blank">Good Moral Character <i class="elink"></i></a></li>
