--- a/enrollment/content.html
+++ b/enrollment/content.html
@@ -15,7 +15,7 @@
   <h5>What To Do:</h5>
   <p>Get <a href="../glossary/index.html#doc-5" target="_blank">enrollment form <i class="elink"></i></a> from the Student Assistant in-charge
     at the given designated area of the school.</p>
-  <h5>What You'll Need:</h5><em>(Click to reveal)</em>
+  <h5>What You'll Need:</h5><em>(Click below to expand)</em>
   <ul class="sublist-content">
     <li>
       <h5 class="collapsible-header">Old Students</h5>
