fixed clearance bug

--- a/clearance/index.html
+++ b/clearance/index.html
@@ -205,24 +205,7 @@
             </div>
             <div class="nav-button">
               <button class="back-button" type="button">Back</button>
-              <button class="next-button" type="button">Next</button>
-            </div>
-          </div>
-        </div>
-        <!----------------------step 12----------------------------------------->
-        <div class="container">
-          <!--------------title-------------------->
-          <div class="accordion-header"> 
-            <div class="accordion-label"><h4 id="head-12"></h4></div> 
-          </div>
-          <!--------------content-------------------->
-          <div class="accordion-panel"> 
-            <div id="content-12" class="content">
-              
-            </div>
-            <div class="nav-button">
-              <button class="back-button" type="button">Back</button>
-              <button class="finish-button" type="button">Finish</button>
+              <button class="next-button" type="button">Finish</button>
             </div>
           </div>
         </div>
