fix clearance step order

--- a/clearance/index.html
+++ b/clearance/index.html
@@ -205,7 +205,7 @@
             </div>
             <div class="nav-button">
               <button class="back-button" type="button">Back</button>
-              <button class="next-button" type="button">Finish</button>
+              <button class="finish-button" type="button">Finish</button>
             </div>
           </div>
         </div>
