fixed preload font

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <title>Main Page: ByStep</title>
   <link class="head-icon" rel="icon" href="assets/ico/brand/logo-only.svg">
-  <link rel="preload" href="main.css" as="style" >
+  <link rel="preload" href="fonts.css" as="style">
+  <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="darkmode.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
