--- a/enrollment/index.html
+++ b/enrollment/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Enrollment: ByStep</title>
     <link class="head-icon" rel="icon" href="../assets/ico/brand/logo-only.svg">
-    <link rel="preload" href="../main.css" as="style">
+    <link rel="preload" href="../fonts.css" as="style">
+    <link rel="stylesheet" href="../main.css">
     <link rel="stylesheet" href="../page.css">
     <link rel="stylesheet" href="../content.css">
     <link rel="stylesheet" href="../darkmode.css">
