--- a/glossary/index.html
+++ b/glossary/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>ByStep: Glossary Page</title>
     <link class="head-icon" rel="icon" href="../assets/ico/brand/logo-only.svg">
+    <link rel="stylesheet" href="../fonts.css">
     <link rel="stylesheet" href="../main.css">
     <link rel="stylesheet" href="glossary.css">
     <link rel="stylesheet" href="../darkmode.css">
