--- a/user-manual/index.html
+++ b/user-manual/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>User Manual: ByStep</title>
+  <link rel="stylesheet" href="../fonts.css">
   <link rel="stylesheet" href="../page.css">
   <link rel="stylesheet" href="../main.css">
   <link rel="stylesheet" href="user-manual.css">
