--- a/glossary/index.html
+++ b/glossary/index.html
@@ -186,7 +186,7 @@
         </div>
       </div>
       <!-----------LOCATION SECTION------------->
-      <h3 class="group-section">LOCATION</h3>
+      <h3 class="group-section">LOCATIONS</h3>
       <div id="loc-1" class="term">
         <div class="modal">
           <img src="../assets/gallery/glossary-entries/locations/assessors-office.jpg" alt="Assessor's Office" class="tpl-img">
