--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <input class="search-bar" type="text" placeholder="Filter...">
       </div>
       <ul class="nav-list">
-        <li class="list-header doclist"><h4>Forms</h4>
+        <li class="list-header doclist"><h4>Documents</h4>
           <ul class="list-name">
             <li><a href="glossary/index.html#doc-1">Affidavit of Loss</a></li>
             <li><a href="glossary/index.html#doc-2">Birth Certificate</a></li>
@@ -104,7 +104,7 @@
             <li><a href="glossary/index.html#doc-15">Transcript of Records</a></li>
           </ul>
         </li>
-        <li class="list-header loclist"><h4>Buildings and Offices</h4>
+        <li class="list-header loclist"><h4>Locations</h4>
           <ul class="list-name">
             <li><a href="glossary/index.html#loc-1">Assessor's Office</a></li>
             <li><a href="glossary/index.html#loc-2">Building A</a></li>
@@ -135,7 +135,7 @@
     </div>
     <div class="desktop-sidebar">
       <ul class="nav-list">
-        <li class="list-header doclist"><h4>Forms</h4>
+        <li class="list-header doclist"><h4>Documents</h4>
           <ul class="list-name">
             <li><a href="glossary/index.html#doc-1">Affidavit of Loss</a></li>
             <li><a href="glossary/index.html#doc-2">Birth Certificate</a></li>
@@ -154,7 +154,7 @@
             <li><a href="glossary/index.html#doc-15">Transcript of Records</a></li>
           </ul>
         </li>
-        <li class="list-header loclist"><h4>Buildings and Offices</h4>
+        <li class="list-header loclist"><h4>Locations</h4>
           <ul class="list-name">
             <li><a href="glossary/index.html#loc-1">Assessor's Office</a></li>
             <li><a href="glossary/index.html#loc-2">Building A</a></li>
