--- a/enrollment/index.html
+++ b/enrollment/index.html
@@ -189,7 +189,7 @@
             </div>
             <div class="nav-button">
               <button class="back-button" type="button">Back</button>
-              <button class="finish-button" type="button">Next</button>
+              <button class="finish-button" type="button">Finish</button>
             </div>
           </div>
         </div>
