added new apk link

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       <i id="sidebr" class="sidebar-open"></i>
       <i class="applogo"></i>
       <h3 class="school-name">GARCIA COLLEGE OF TECHNOLOGY</h3>
+        <a class="app-dl" href="https://drive.google.com/file/d/18Mn4XhQbf_hV02wq1H5q5d8WxwTnl8Ya/view?usp=drive_link" target="_blank">
+          <span>APP</span>
+          <i class="android-icon"></i>
+        </a>
       <a class="help-btn" href="user-manual/"><i></i></a>
     </header>
     <div class="header-placeholder"></div> <!--placeholder space below header to prevent clipping of contents with main page-->
