--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </label>
       </div>
       <div class="search">
-        <input class="search-bar" type="text" placeholder="Filter...">
+        <input class="search-bar" type="text" placeholder="Search...">
       </div>
       <ul class="nav-list">
         <li class="list-header doclist"><h4>Documents</h4>
@@ -135,7 +135,7 @@
       </label>
     </div>
     <div class="search-desktop">
-      <input class="search-bar" type="text" placeholder="Filter...">
+      <input class="search-bar" type="text" placeholder="Search...">
     </div>
     <div class="desktop-sidebar">
       <ul class="nav-list">
